<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>galaxy-talos-client</artifactId>
        <groupId>com.xiaomi.infra.galaxy</groupId>
        <version>2.2-SNAPSHOT</version>
    </parent>

    <groupId>com.xiaomi.infra.galaxy</groupId>
    <artifactId>galaxy-talos-spark</artifactId>
    <version>2.2-SNAPSHOT</version>

    <properties>
        <scala.version>2.10.4</scala.version>
        <scala.binary.version>2.10</scala.binary.version>
        <spark.version>1.6.1</spark.version>
        <java.version>1.6</java.version>
        <PermGen>512m</PermGen>
        <MaxPermGen>1024m</MaxPermGen>
        <CodeCacheSize>1024m</CodeCacheSize>
        <skipTests>false</skipTests>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-streaming_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.xiaomi.infra.galaxy</groupId>
            <artifactId>galaxy-talos-sdk</artifactId>
            <version>${project.version}</version>
            <exclusions>
                <exclusion>
                    <groupId>com.xiaomi.infra.galaxy</groupId>
                    <artifactId>galaxy-authorization</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_${scala.binary.version}</artifactId>
            <version>${spark.version}</version>
            <type>test-jar</type>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_${scala.binary.version}</artifactId>
            <version>2.2.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.json4s</groupId>
            <artifactId>json4s-jackson_2.10</artifactId>
            <version>3.2.10</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
              <groupId>net.alchim31.maven</groupId>
              <artifactId>scala-maven-plugin</artifactId>
              <version>3.2.2</version>
              <executions>
                <execution>
                  <id>eclipse-add-source</id>
                  <goals>
                    <goal>add-source</goal>
                  </goals>
                </execution>
                <execution>
                  <id>scala-compile-first</id>
                  <phase>process-resources</phase>
                  <goals>
                    <goal>compile</goal>
                  </goals>
                </execution>
                <execution>
                  <id>attach-scaladocs</id>
                  <phase>verify</phase>
                  <goals>
                    <goal>doc-jar</goal>
                  </goals>
                </execution>
              </executions>
              <configuration>
                <scalaVersion>${scala.version}</scalaVersion>
                <args>
                  <arg>-unchecked</arg>
                  <arg>-deprecation</arg>
                  <arg>-feature</arg>
                </args>
                <jvmArgs>
                  <jvmArg>-Xms1024m</jvmArg>
                  <jvmArg>-Xmx1024m</jvmArg>
                  <jvmArg>-XX:PermSize=${PermGen}</jvmArg>
                  <jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>
                  <jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>
                </jvmArgs>
                <javacArgs>
                  <javacArg>-source</javacArg>
                  <javacArg>${java.version}</javacArg>
                  <javacArg>-target</javacArg>
                  <javacArg>${java.version}</javacArg>
                  <javacArg>-Xlint:all,-serial,-path</javacArg>
                </javacArgs>
              </configuration>
            </plugin>
            <plugin>
                <groupId>org.scala-tools</groupId>
                <artifactId>maven-scala-plugin</artifactId>
                <version>2.15.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.scalatest</groupId>
                <artifactId>scalatest-maven-plugin</artifactId>
                <version>1.0</version>
                <configuration>
                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                    <junitxml>.</junitxml>
                    <filereports>TestSuite.txt</filereports>
                    <skipTests>${skipTests}</skipTests>
                    <suites>HDFSOffsetDAOSuite,TalosClusterSuite</suites>
                </configuration>
                <executions>
                    <execution>
                        <id>test</id>
                        <goals>
                            <goal>test</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <excludes>
                        <exclude>**/*</exclude>
                    </excludes>
                    <reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
                    <failIfNoTests>false</failIfNoTests>
                    <skipTests>${skipTests}</skipTests>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.scalastyle</groupId>
                <artifactId>scalastyle-maven-plugin</artifactId>
                <version>0.7.0</version>
                <configuration>
                    <verbose>false</verbose>
                    <failOnViolation>true</failOnViolation>
                    <includeTestSourceDirectory>false</includeTestSourceDirectory>
                    <failOnWarning>false</failOnWarning>
                    <sourceDirectory>${basedir}/src/main/scala</sourceDirectory>
                    <testSourceDirectory>${basedir}/src/test/scala</testSourceDirectory>
                    <configLocation>${basedir}/scalastyle-config.xml</configLocation>
                    <outputFile>${basedir}/target/scalastyle-output.xml</outputFile>
                    <inputEncoding>UTF-8</inputEncoding>
                    <outputEncoding>UTF-8</outputEncoding>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>
